# scallop-lang

./: CMakeLists.txt  Config.cmake.in  Doxyfile  annotated.html  build.nix  classes.html  classifier_8h.html  classifier_8h_source.html  default.nix  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68435c6365c86dc2d915bd4cbcef1342.html  files.html  functions.html  functions_vars.html  globals.html  globals_func.html  globals_type.html  globals_vars.html  index.html  lex_8h.html  lex_8h_source.html  parse_8h.html  parse_8h_source.html  shell.nix  struct__scallop__dequeue__t.html  struct__scallop__read__t.html  structscallop__lang__lex.html  structscallop__lang__parse__lex.html  structscallop__lang__parse__parser.html  structscallop__lang__token.html  token_8h.html  token_8h_source.html
pages/: CMakeLists.txt  classifier-example.c  lex-example.c
search/: all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  classes_0.js  classes_1.js  files_0.js  files_1.js  functions_0.js  searchdata.js  typedefs_0.js  variables_0.js  variables_1.js  variables_2.js  variables_3.js
src/: CMakeLists.txt  classifier.c  lex.c  lexer.c  parse.c  token.c
src/scallop/: lexer.h
src/scallop-lang/: classifier.h  lex.h  parse.h  token.h
tests/: CMakeLists.txt  macros.h  scallop_lang_classifier.c  scallop_lang_lex.c  scallop_lang_parse.c  scallop_lang_token.c  test_close_curly_brackets.c  test_close_square_brackets.c  test_double_quoted_strings.c  test_escape_double_quoted.c  test_escape_quoted.c  test_escape_unquoted.c  test_macros.h  test_open_curly_brackets.c  test_open_square_brackets.c  test_quoted_strings.c  test_read_not_ready.c  test_short_phrase.c  test_statements.c  test_word.c  test_word_separator.c
