function(testcase target)
	add_executable(${target} ${target}.c)
	target_link_libraries(${target} csalt scalloplexer)
	add_test(NAME ${target} COMMAND ${target})
endfunction(testcase)

testcase(test_close_curly_brackets)
testcase(test_close_square_brackets)
testcase(test_double_quoted_strings)
testcase(test_escape_double_quoted)
testcase(test_escape_quoted)
testcase(test_escape_unquoted)
testcase(test_open_curly_brackets)
testcase(test_open_square_brackets)
testcase(test_quoted_strings)
testcase(test_short_phrase)
testcase(test_statements)
testcase(test_word)
testcase(test_word_separator)
testcase(test_read_not_ready)
